service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-loadbalancer
  labels:
    app: flask-app
spec:
  type: LoadBalancer
  selector:
    app: flask-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    name: http
