ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  labels:
    app: flask-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: arbi-flask.duckdns.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-app-service
            port:
              number: 80
